--- a/cube.css
+++ b/cube.css
@@ -2,8 +2,8 @@ body {
     background-color: #1a1a1a;
     font-size: 32px;
     color: white;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    max-width: 100%;    
     display: block;
     position: relative;
 }
@@ -14,21 +14,40 @@ body {
     text-align: center;
 }
 
-.ui__game {
-    height: 60vh;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-}
+
 
 .ui__texts {
-    margin-top: 5%;
-    font-size: 100%;
+    position: absolute;
+    right: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    
+}
+
+.ui__texts  img {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 20vh;
+    width: auto;
+}
+
+.text--timer {
+    font-family: 'Seven Segment', sans-serif;
+    position: absolute;
+    top: 10vh;
+    right: 2vh;
+    transform: translate(-50%, -50%);
+    font-size: 70px;
     font-weight: bold;
 }
 
+.game {
+    height: 80vh;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 .ui__buttons {
-    margin-top: 3%;
+    margin-top: 5%;
 }
 
 button {
@@ -38,8 +57,7 @@ button {
     padding: 12px 24px;
     font-size: 100%;
     cursor: pointer;
-    margin: 0.5%;
-    border-radius: 5px;
+    border-radius: 10px;
     transition: background 0.3s;
 }
 
