--- a/cube.css
+++ b/cube.css
@@ -1,21 +1,18 @@
-element {
-	overflow-x: hidden;
+
+
+html,
+body {
+    height: 100%;
+    max-height: 100vh;
 }
 
 body {
     background-color: #1a1a1a;
     font-size: 32px;
     color: white;
-    height: 100%;
-    max-width: 100%;    
+    max-width: 100%;
     display: block;
     position: relative;
-}
-
-.ui {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 }
 
 
@@ -89,7 +86,7 @@ body {
 .blockinglogo img{
     position: absolute;
     z-index: 3;
-
+    
     align-items: center;
     height: 50vh;
     width: auto; 
@@ -121,27 +118,34 @@ body {
 }
 
 .game {
-    height: 80vh;
+    height: 70vh;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
 .ui__buttons {
-    margin-top: 5%;
+    justify-content: center;
+    height: 30vh;
+    padding: 2%;
+    background-color:#1a1a1a;
+    display: flex;
+    gap: 30px;
 }
 
 button {
-    background-color: #ff5722;
-    color: white;
-    border: none;
-    padding: 12px 24px;
-    font-size: 100%;
+    background-color: #1a1a1a;
     cursor: pointer;
     border-radius: 10px;
     transition: background 0.3s;
 }
 
+
+button img {
+    height: 100%;
+    width: auto;
+}
+
 button:hover {
-    background-color: #e64a19;
+    background-color: #312c2b;
 }
 
 button:active {
