--- a/cube.css
+++ b/cube.css
@@ -4,7 +4,7 @@ html,
 body {
     height: 100%;
     max-height: 100vh;
-    overflow: hidden
+    overflow: hidden;
 }
 
 body {
@@ -16,6 +16,71 @@ body {
     position: relative;
 }
 
+
+.handgesture_switch {
+  position: absolute;
+  display: inline-block;
+  top: 3vh;
+  left: 3vh;
+  width: 100px;
+  height: 34px;
+}
+
+.handgesture_switch pre{
+    position: absolute;
+    left: 110%;
+    top: -1.75vh;
+    font-size: 20px;
+    color: white;
+}
+
+.handgesture_switch input {
+  cursor: pointer;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.slider {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(66px);
+}
 
 
 .ui__texts {
@@ -45,7 +110,7 @@ body {
 
 .performance__screen{
     position: absolute;
-    top: 17.5vh;
+    top: 10vh;
     left: 10vh;
     height: 50vh;
     width: 60vh;
