--- a/Main-menu-page/main.css
+++ b/Main-menu-page/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 .menu {
-  width: 30%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -37,11 +37,9 @@ body {
   width: 100%;
   justify-content: center;
   align-items: center;
-  border: 0px;
-  border-radius: px;
+  border: 120px;
+  border-radius: 50px;
   border-color: rgb(224, 40, 40);
-  color: white;
-  background-color: rgb(224, 40, 40); /* Set background color */
 }
 
 .menu .left-buttons button {
@@ -56,7 +54,7 @@ body {
     transition: all 0.3s ease;
     border-radius: 10px; /* Optional: Increase border-radius for larger buttons */
     left: 30x;
-    border-color: rgb(193, 159, 47);
+    border-color: rgb(148, 121, 70);
   }
 
 .menu .left-buttons button:hover {
