--- a/templates/cube.html
+++ b/templates/cube.html
@@ -5,10 +5,14 @@
     <meta charset="utf-8">    
     <title>Rubik cube</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='cube.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/seven-segment">
 
 </head>
-
+<script>
+      const gameSettings = {{ settings|tojson|safe }};
+</script>
 <body>
     <div class="blockingscreen"></div>
     <div class="blockingscreen2"></div>
@@ -30,18 +34,21 @@
         </div>
     </div>
     <div class="performance__screen">
-            <div class="bbox"><div class = "performance--text">
-                Your performance
-            </div></div>
-            <div class = "performance--info">
-                <pre>
-Finished time:
-
-
-Personal record:
-
-                </pre>
+            <div class="bbox">
+                <div class = "performance--text">
+                    Your performance
+                </div>
             </div>
+        <div class = "performance--info">
+
+            <div id = "text--finished">
+                Finished in 0:00
+            </div>
+            <div id = "text--best">
+                Best time: 0:00
+            </div>
+
+        </div>
     </div>
     <div class="game"></div>
 
